[gd_scene load_steps=13 format=2]

[ext_resource path="res://tiles/island1.gd" type="Script" id=1]
[ext_resource path="res://environment/objects/chest/Chest.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.129412, 0.415686, 0.752941, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.286275, 0.760784, 0.152941, 1 )

[sub_resource type="CylinderMesh" id=5]
top_radius = 0.05
bottom_radius = 0.05
height = 3.0

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.509804, 0.27451, 0, 1 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0.282353, 0.282353, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.536096, 1, 0.613919 )

[sub_resource type="CylinderShape" id=10]
radius = 6.99703

[node name="island1" type="Spatial"]
script = ExtResource( 1 )

[node name="Sea" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 0.1, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="LandPivot" type="Spatial" parent="."]
transform = Transform( 2, 0, 0, 0, 0.1, 0, 0, 0, 2, 0, 0, 0 )

[node name="Land" type="MeshInstance" parent="LandPivot"]
transform = Transform( 0.231926, 0, 0, 0, 1.23435, 0, 0, 0, 0.442442, 0, 1.59038, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Pole" type="MeshInstance" parent="LandPivot/Land"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 1, -0.19719, 2.58254, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Flag" type="MeshInstance" parent="LandPivot/Land/Pole"]
transform = Transform( 0.289363, 0, 0, 0, 0.667265, 0, 0, 0, 0.04472, 0.318184, 0.596325, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Area" type="Area" parent="LandPivot/Land"]
transform = Transform( 2.15586, 0, 0, 0, 8.10143, 0, 0, 0, 2.15586, 0, -1.28844, 0 )

[node name="CollisionShape" type="CollisionShape" parent="LandPivot/Land/Area"]
shape = SubResource( 9 )

[node name="Chest" parent="LandPivot/Land" instance=ExtResource( 2 )]
transform = Transform( 0.951126, 0, 0, 0, 3.5742, 0, 0, 0, 0.498574, 0, 1.02422, -0.625151 )

[node name="AreaMusic" type="Area" parent="LandPivot/Land/Chest"]

[node name="CollisionShape" type="CollisionShape" parent="LandPivot/Land/Chest/AreaMusic"]
shape = SubResource( 10 )
[connection signal="body_entered" from="LandPivot/Land/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="LandPivot/Land/Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="LandPivot/Land/Chest/AreaMusic" to="." method="_on_AreaMusic_body_entered"]
[connection signal="body_exited" from="LandPivot/Land/Chest/AreaMusic" to="." method="_on_AreaMusic_body_exited"]
